# ifcb-rest-api

./: README.md
raw/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  schema.sql
raw/raw-data-service/: archives.py  binstores.py  ifcb.py  ifcb_parsing.py  ifcb_pid_transformer.py  ifcbhdr.py  main.py  models.py  processor.py  redis_client.py  roistore.py  roistores.py  s3_roi_helpers.py  s3utils.py
