[project]
name = "raw-data-service"
version = "0.1.0"
description = "Serves raw IFCB data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "amplify-stateless @ git+https://github.com/WHOIGit/amplify-stateless-microservice.git@v1.3.1",
    "amplify-storage-utils @ git+https://github.com/WHOIGit/amplify-storage-utils.git@v1.5.1",
    "aiofiles",
    "pillow",
    "pyifcb @ git+https://github.com/joefutrelle/pyifcb.git@v1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages =["raw_service"]

[tool.hatch.metadata]
allow-direct-references = true
