[project]
name = "raw-data-service"
version = "0.1.0"
description = "Serves raw IFCB data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "amplify-stateless[auth] @ git+https://github.com/WHOIGit/amplify-stateless-microservice.git@v1.4.4",
    "amplify-storage-utils[s3] @ git+https://github.com/WHOIGit/amplify-storage-utils.git@v1.6.0",
    "aiofiles",
    "pillow",
    "gunicorn",
    "redis>=5.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages =["raw_service"]

[tool.hatch.metadata]
allow-direct-references = true
